unpackaged/main/default/objects/Patient_Relationship__c/Patient_Relationship__c.object-meta.xml
<CustomObject>
    <label>Patient Relationship</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Patient Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>