unpackaged/main/default/objects/Patient_Relationship__c/fields/Data_Protection__c.field-meta.xml
<CustomField>
    <fullName>Data_Protection__c</fullName>
    <label>Data Protection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>